content/static: fix header content overlapping hamburger menu bug
The content from the header obscures the hamburger
menu content because it has a higher z-index.
Decreasing the z-index fixes the issue.

Fixes golang/go#45496

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/309369
Trust: Jamal Carvalho <jamal@golang.org>

--- a/content/static/css/sidenav.css
+++ b/content/static/css/sidenav.css
@@ -22,7 +22,7 @@
   position: sticky;
   top: calc(var(--header-height, 0) + var(--banner-height, 0));
   transition: box-shadow 0.2s linear;
-  z-index: 100;
+  z-index: 1;
 }
 @media print {
   .DocNavMobile {
