--- a/content/static/css/unit_header.css
+++ b/content/static/css/unit_header.css
@@ -9,7 +9,7 @@
   position: sticky;
   top: calc(var(--full-header-height) * -1 + var(--banner-height) + var(--header-height));
   white-space: nowrap;
-  z-index: 100;
+  z-index: 1;
 }
 
 .UnitHeader-breadcrumbs {
@@ -210,7 +210,7 @@
 }
 
 .UnitHeader-banners {
-  z-index: 10;
+  z-index: 1;
 }
 .UnitHeader-banner {
   display: flex;
